--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/react": "^2.6.7",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.13.5",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
@@ -21,6 +21,7 @@
     "react-redux": "^9.1.2",
     "sass": "^1.79.5",
     "swiper": "^11.1.14",
+    "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
